# MathSS2020

./: README.md
Praktikum_1/: CMakeLists.txt  CMyVector.cpp  CMyVector.h  main.cpp
Praktikum_2/: CMyMatrix.cpp  CMyMatrix.h  CMyVector.cpp  CMyVector.h  main.cpp
Praktikum_3/: CMakeLists.txt  CMyVector.cpp  CMyVector.h  C_DGLSolver.cpp  C_DGLSolver.h  main.cpp  run.sh
Praktikum_4/: CKomplex.cpp  CKomplex.h  CMakeLists.txt  FT.cpp  FT.h  README.md  hoever_io.cpp  hoever_io.h  main.cpp
Praktikum_5/: CLotto.cpp  CMakeLists.txt  CZufall.cpp  main.cpp
